--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <main id="content" class="main-content" role="main">
-      {{ content }}
+      {% for post in site.posts %}
+        {{ post.content }}
+      {% endfor %}
     </main>
 
   </body>
