--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
       {% for post in site.posts %}
         {{ post.content }}
       {% endfor %}
+      {% for page in site.pages %}
+        {{ page.content }}
+      {% endfor %}
     </main>
 
   </body>
