--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: 14px;
+      line-height: 1.5;
+      color: #24292e;
+      background-color: #fff;
     }
 
     @media only screen and (max-width: 800px) {
