--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,15 @@
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      font-size: 16px;
-      line-height: 1.5;
-      color: #24292e;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.625;
       background-color: #fff;
+      color: #333;
+    }
+
+    a {
+      color: #333;
     }
 
     @media only screen and (max-width: 800px) {
@@ -25,7 +30,7 @@
     }
     @media only screen and (min-width: 800px) {
       #content {
-        grid-template-columns: 250px auto;
+        grid-template-columns: 300px auto;
         grid-column-gap: 20px;
         grid-template-areas:
           "toc policies";
@@ -39,10 +44,21 @@
       left: 0;
       right: 0;
     }
+    #toc ul {
+      list-style-type: none;
+      line-height: 1.8;
+      padding-left: 0;
+      margin-left: 40px;
+      margin-top: 20px;
+    }
+    #toc a {
+      text-decoration: none;
+    }
 
     #toc {
       grid-area: toc;
       overflow: scroll;
+      padding-top: 8px;
     }
     #policies {
       grid-area: policies;
@@ -53,7 +69,15 @@
       margin: 10px 20px;
     }
     .active {
-      font-weight: bold;
+      font-weight: 500;
+    }
+    .active a {
+      color: #326BF0;
+      font-weight: normal;
+    }
+    li {
+      margin-left: 0;
+      font-weight: normal;
     }
   </style>
   <script type="text/javascript">
@@ -65,7 +89,6 @@
     }
 
     function scrollspy() {
-      console.log("running");
       const elementList = document.querySelectorAll(".policy");
       let onPage = [];
 
@@ -80,11 +103,17 @@
             }
           }
           if (onPage.length) {
+            const first = onPage[0];
+            let minY = first.getBoundingClientRect().y;
+            let minElem = first;
             for (let elem of onPage) {
+              if (elem.getBoundingClientRect().y < minY) {
+                minY = elem.getBoundingClientRect().y;
+                minElem = elem;
+              }
               console.log(elem.dataset.spy);
             }
-            const first = onPage[0];
-            const tag = first.dataset.spy;
+            const tag = minElem.dataset.spy;
             const currentlyActive = document.querySelector(".active");
             if (currentlyActive) {
               currentlyActive.classList.remove('active');
@@ -116,7 +145,7 @@
         <div id="policy-content">
         {% for policy in site.policies %}
         <div class="policy" data-spy="{{policy.title | slugify}}">
-          <h1><a name="{{policy.title | slugify}}">{{ policy.title }}</a></h1>
+          <h1><a name="{{policy.title | slugify}}"></a>{{ policy.title }}</h1>
           {{ policy.content }}
         </div>
           {% endfor %}
